--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-Pillow>=9.0
-selenium>=4.0
-webdriver-manager>=3.8
-pyperclip>=1.8
+Pillow
+selenium
+webdriver-manager
+pyperclip
+appdirs
+getmac
+fpdf2
+pyinstaller
