--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -19,6 +19,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install pyinstaller
+        pip install -r requirements.txt
 
     - name: Build with PyInstaller
       run: |
