--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -1,31 +1,40 @@
-name: Build Windows EXE
+name: Build NREGA Dashboard for Windows
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
+  workflow_dispatch:  # Allows manual trigger
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.10'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
 
-    - name: Install dependencies
-      run: |
-        pip install pyinstaller
-        pip install -r requirements.txt
+      - name: Install dependencies
+        run: |
+          pip install pyinstaller
+          pip install -r requirements.txt || echo "no requirements.txt found"
 
-    - name: Build with PyInstaller
-      run: |
-        pyinstaller --noconfirm --onefile --windowed --name "NREGA-Dashboard" --icon="app_icon.ico" --add-data="logo.png;." --add-data="payment_qr.png:." --add-data="jobcard.jpeg:." main_app.py
-    - name: Upload EXE as Artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: Nrega_Dashboard-v2.4.0
-        path: dist/your_script.exe
+      - name: Build with PyInstaller
+        run: |
+          pyinstaller --noconfirm --onefile --windowed ^
+            --name "NREGA-Dashboard" ^
+            --icon "app_icon.ico" ^
+            --add-data "logo.png;." ^
+            --add-data "payment_qr.png;." ^
+            --add-data "jobcard.jpeg;." ^
+            main_app.py
+
+      - name: Upload EXE Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: NREGA-Dashboard
+          path: dist/NREGA-Dashboard.exe
