--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -3,7 +3,7 @@ name: Build NREGA Dashboard for Windows
 on:
   push:
     branches: [main]
-  workflow_dispatch:  # Allows manual trigger
+  workflow_dispatch:
 
 jobs:
   build:
@@ -34,7 +34,7 @@ jobs:
             main_app.py
 
       - name: Upload EXE Artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: NREGA-Dashboard
           path: dist/NREGA-Dashboard.exe
