--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -37,4 +37,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: NREGA-Dashboard
-          path: dist/NREGA-Dashboard.exe
+          path: dist/NREGA-Dashboard-v2.4.0.exe
