--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -24,14 +24,13 @@ jobs:
           pip install -r requirements.txt || echo "no requirements.txt found"
 
       - name: Build with PyInstaller
-        run: |
-          pyinstaller --noconfirm --onefile --windowed ^
-            --name "NREGA-Dashboard" ^
-            --icon "app_icon.ico" ^
-            --add-data "logo.png;." ^
-            --add-data "payment_qr.png;." ^
-            --add-data "jobcard.jpeg;." ^
-            main_app.py
+        run: >
+          pyinstaller --noconfirm --onefile --windowed --name "NREGA-Dashboard"
+          --icon "app_icon.ico"
+          --add-data "logo.png;."
+          --add-data "payment_qr.png;."
+          --add-data "jobcard.jpeg;."
+          main_app.py
 
       - name: Upload EXE Artifact
         uses: actions/upload-artifact@v4
