--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -1,9 +1,9 @@
-name: Build NREGA Dashboard for Windows
+name: Build Windows Executable and Installer
 
 on:
   push:
-    branches: [main]
-  workflow_dispatch:
+    tags:
+      - 'v*'
 
 jobs:
   build:
@@ -11,29 +11,48 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: '3.10'
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
           pip install pyinstaller
-          pip install -r requirements.txt || echo "no requirements.txt found"
 
       - name: Build with PyInstaller
-        run: >
-          pyinstaller --noconfirm --onefile --windowed --name "NREGA-Dashboard"
-          --icon "app_icon.ico"
-          --add-data "logo.png;."
-          --add-data "payment_qr.png;."
-          --add-data "jobcard.jpeg;."
-          main_app.py
+        run: |
+          pyinstaller --noconfirm --onefile --windowed --name "NREGA-Dashboard" --icon="app_icon.ico" ^
+            --add-data="logo.png;." --add-data="payment_qr.png;." --add-data="jobcard.jpeg;." main_app.py
 
-      - name: Upload EXE Artifact
+      - name: Install Inno Setup
+        run: |
+          choco install innosetup --no-progress
+
+      - name: Build Installer with Inno Setup
+        run: |
+          "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" build_installer.iss
+
+      - name: Upload EXE as artifact
         uses: actions/upload-artifact@v4
         with:
           name: NREGA-Dashboard
           path: dist/NREGA-Dashboard.exe
+
+      - name: Upload Installer as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: NREGA-Dashboard-Installer
+          path: dist/NREGA-Dashboard-Setup.exe
+
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
+        with:
+          files: |
+            dist/NREGA-Dashboard.exe
+            dist/NREGA-Dashboard-Setup.exe
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
