--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,13 @@ dashboard.py
 experiment/
 dmg/
 updates/
+tabs/__pycache__/
+tabs/__pycache__/about_tab.cpython-312.pyc
+tabs/__pycache__/if_edit_tab.cpython-312.pyc
+tabs/__pycache__/jobcard_verify_tab.cpython-312.pyc
+tabs/__pycache__/mb_entry_tab.cpython-312.pyc
+tabs/__pycache__/msr_tab.cpython-312.pyc
+tabs/__pycache__/musterroll_gen_tab.cpython-312.pyc
+tabs/__pycache__/wagelist_gen_tab.cpython-312.pyc
+tabs/__pycache__/wagelist_send_tab.cpython-312.pyc
+tabs/__pycache__/wc_gen_tab.cpython-312.pyc
