--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -22,6 +22,15 @@ jobs:
         with:
           python-version: '3.11'
 
+      # --- FIXED: Added caching for pip dependencies ---
+      - name: Cache pip packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -31,7 +40,6 @@ jobs:
         if: runner.os == 'macOS'
         run: pip install create-dmg
 
-      # --- NEW STEP TO HANDLE THE SECRET ---
       - name: Create .env file
         run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
         shell: bash
@@ -47,7 +55,7 @@ jobs:
           fi
 
       - name: Upload Artifacts
-        uses: actions/upload-artifact@v4 # FIXED: Updated to v4
+        uses: actions/upload-artifact@v4
         with:
           name: nrega-bot-${{ runner.os }}
           path: |
@@ -63,7 +71,7 @@ jobs:
     
     steps:
       - name: Download all artifacts
-        uses: actions/download-artifact@v4 # FIXED: Updated to v4
+        uses: actions/download-artifact@v4
         with:
           path: artifacts/
 
