--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -52,8 +52,8 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          # --- FIXED: Added --no-cache-dir to force re-installation of universal binaries ---
-          pip install --no-cache-dir -r requirements.txt -v
+          # --- FIXED: Force Pillow to be built from source to create a universal binary ---
+          pip install --no-cache-dir --no-binary Pillow -r requirements.txt -v
           
       - name: Install macOS specific dependencies
         if: runner.os == 'macOS'
