--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -49,10 +49,18 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      - name: Install dependencies
+      # --- FIXED: Use separate dependency installation steps for each OS ---
+      - name: Install dependencies on Windows
+        if: runner.os == 'Windows'
         run: |
           python -m pip install --upgrade pip
-          # --- FIXED: Force Pillow to be built from source to create a universal binary ---
+          pip install -r requirements.txt -v
+          
+      - name: Install dependencies on macOS
+        if: runner.os == 'macOS'
+        run: |
+          python -m pip install --upgrade pip
+          # Force Pillow to be built from source to create a universal binary
           pip install --no-cache-dir --no-binary Pillow -r requirements.txt -v
           
       - name: Install macOS specific dependencies
