--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -49,7 +49,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pip-
 
-      # --- FIXED: Use separate dependency installation steps for each OS ---
       - name: Install dependencies on Windows
         if: runner.os == 'Windows'
         run: |
@@ -60,8 +59,8 @@ jobs:
         if: runner.os == 'macOS'
         run: |
           python -m pip install --upgrade pip
-          # Force Pillow to be built from source to create a universal binary
-          pip install --no-cache-dir --no-binary Pillow -r requirements.txt -v
+          # --- FIXED: Force all packages with binary components to be built from source ---
+          pip install --no-cache-dir --no-binary :all: -r requirements.txt -v
           
       - name: Install macOS specific dependencies
         if: runner.os == 'macOS'
