--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -41,13 +41,14 @@ jobs:
           echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
         shell: bash
 
+      # --- FIXED: Made the cache key architecture-aware to prevent conflicts ---
       - name: Cache pip packages
         uses: actions/cache@v4
         with:
           path: ${{ steps.pip-cache.outputs.dir }}
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          key: ${{ runner.os }}-pip-${{ env.ARCHFLAGS }}-${{ hashFiles('**/requirements.txt') }}
           restore-keys: |
-            ${{ runner.os }}-pip-
+            ${{ runner.os }}-pip-${{ env.ARCHFLAGS }}-
 
       - name: Install dependencies on Windows
         if: runner.os == 'Windows'
@@ -59,8 +60,7 @@ jobs:
         if: runner.os == 'macOS'
         run: |
           python -m pip install --upgrade pip
-          # --- FIXED: Force all packages with binary components to be built from source ---
-          pip install --no-cache-dir --no-binary :all: -r requirements.txt -v
+          pip install --no-binary :all: -r requirements.txt -v
           
       - name: Install macOS specific dependencies
         if: runner.os == 'macOS'
