--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -81,7 +81,10 @@ jobs:
     - name: Install tools
       run: |
         brew install create-dmg
-        pip3 install -r requirements.txt pyinstaller
+        python3 -m venv venv
+        source venv/bin/activate
+        pip install --break-system-packages -r requirements.txt
+        pip install --break-system-packages pyinstaller
 
     - name: Make executable
       run: chmod +x build_macos.sh
@@ -110,10 +113,14 @@ jobs:
       run: |
         sudo apt-get update
         sudo apt-get install -y libfuse2
-        pip install -r requirements.txt pyinstaller
+        python3 -m venv venv
+        source venv/bin/activate
+        pip install --break-system-packages -r requirements.txt
+        pip install --break-system-packages pyinstaller
 
     - name: Build Linux App
       run: |
+        source venv/bin/activate
         pyinstaller --noconfirm --windowed --name "NREGABot-v${{ needs.prepare.outputs.version }}" \
         --add-data="logo.png:." \
         --add-data="payment_qr.png:." \
