--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -38,8 +38,7 @@ jobs:
         python-version: '3.10'
 
     - name: Set up .env from secrets
-      run: |
-        echo "API_KEY=${{ secrets.API_KEY }}" > Nrega_Automation/.env
+      run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
 
     - name: Install dependencies
       run: |
@@ -86,8 +85,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up .env from secrets
-      run: |
-        echo "API_KEY=${{ secrets.API_KEY }}" > Nrega_Automation/.env
+      run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
 
     - name: Install tools
       run: |
@@ -116,8 +114,7 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up .env from secrets
-      run: |
-        echo "API_KEY=${{ secrets.API_KEY }}" > Nrega_Automation/.env
+      run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
 
     - name: Set up Python
       uses: actions/setup-python@v5
