--- a/.github/workflows/build_all.yml
+++ b/.github/workflows/build_all.yml
@@ -46,25 +46,22 @@ jobs:
         pip install pyinstaller
 
     - name: Build EXE
-      run: |
-        pyinstaller ^
-          --noconfirm ^
-          --windowed ^
-          --name "NREGABot-v${{ needs.prepare.outputs.version }}" ^
-          --icon=assets/app_icon.ico ^
-          --add-data="logo.png;." ^
-          --add-data="payment_qr.png;." ^
-          --add-data="theme.json;." ^
-          --add-data="changelog.json;." ^
-          --add-data="assets;assets" ^
-          --add-data=".env;." ^
-          --add-data="jobcard.jpeg;." ^
-          --collect-data fpdf ^
-          main_app.py
+      shell: cmd
+      run: >
+        pyinstaller --noconfirm --windowed --name "NREGABot-v${{ needs.prepare.outputs.version }}"
+        --icon=assets/app_icon.ico
+        --add-data="logo.png;."
+        --add-data="payment_qr.png;."
+        --add-data="theme.json;."
+        --add-data="changelog.json;."
+        --add-data="assets;assets"
+        --add-data=".env;."
+        --add-data="jobcard.jpeg;."
+        --collect-data fpdf
+        main_app.py
 
     - name: Install Inno Setup
-      run: |
-        choco install innosetup -y
+      run: choco install innosetup -y
 
     - name: Create installer using Inno Setup
       run: |
