--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,40 +6,16 @@ on:
       - 'v*'
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 jobs:
   prepare:
     runs-on: ubuntu-latest
     outputs:
-      version: ${{ steps.extract_version.outputs.version }}
+      version: ${{ steps.version.outputs.version }}
     steps:
       - uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - id: extract_version
-        run: |
-          RAW_TAG=${GITHUB_REF##*/}
-          VERSION=${RAW_TAG#v}
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
-
-      - name: Update version.json
-        run: |
-          jq --arg v "$VERSION" '.latest_version = $v |
-            .download_url_windows = "https://nregabot.com/updates/NREGABot-v\($v)-Setup.exe" |
-            .download_url_macos = "https://nregabot.com/updates/NREGABot-v\($v)-macOS.dmg"' \
-            version.json > version.tmp.json
-          mv version.tmp.json version.json
-
-      - name: Commit updated version.json
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@github.com"
-          git add version.json
-          git commit -m "chore: update version.json to $VERSION" || echo "No changes to commit"
-          git push
+      - id: version
+        run: echo "version=${GITHUB_REF#refs/tags/v}" >> "$GITHUB_OUTPUT"
 
   build-macos:
     needs: prepare
@@ -52,38 +28,28 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install pyinstaller
+        run: pip install pyinstaller
+
+      - name: Make .env file
+        run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
+
+      - name: Build macOS DMG
         run: |
-          pip install -r requirements.txt pyinstaller fpdf
-          brew install create-dmg
-
-      - name: Clean previous builds
-        run: rm -rf dist build
-
-      - name: Make script executable
-        run: chmod +x ./build_macos.sh
-
-      - name: Patch version in build script
-        run: |
-          sed -i '' "s/^APP_VERSION=.*/APP_VERSION=\"${{ needs.prepare.outputs.version }}\"/" build_macos.sh
-
-      - name: Run macOS build
-        run: ./build_macos.sh
+          chmod +x build_macos.sh
+          ./build_macos.sh
 
       - name: Rename DMG
         run: |
-          DMG_FILE=$(find dist -iname '*.dmg' | head -n 1)
-          if [ -f "$DMG_FILE" ]; then
-            mv "$DMG_FILE" "dist/NREGABot-v${{ needs.prepare.outputs.version }}-macOS.dmg"
-          else
-            echo "❌ DMG not found!" && ls -la dist/ && exit 1
-          fi
+          DMG_FILE=$(find dist -name '*.dmg' | head -n 1)
+          if [[ -z "$DMG_FILE" ]]; then echo "DMG not found!"; exit 1; fi
+          mv "$DMG_FILE" "dist/NREGABot-v${{ needs.prepare.outputs.version }}-macOS.dmg"
 
-      - name: Upload macOS DMG
+      - name: Upload macOS artifact
         uses: actions/upload-artifact@v4
         with:
-          name: macos-dmg
-          path: dist/NREGABot-v${{ needs.prepare.outputs.version }}-macOS.dmg
+          name: macos-artifact
+          path: dist/*.dmg
 
   build-windows:
     needs: prepare
@@ -96,9 +62,8 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
-        run: |
-          pip install -r requirements.txt pyinstaller fpdf
+      - name: Install pyinstaller
+        run: pip install pyinstaller
 
       - name: Clean builds
         shell: pwsh
@@ -106,52 +71,35 @@ jobs:
           if (Test-Path dist) { Remove-Item -Recurse -Force dist }
           if (Test-Path build) { Remove-Item -Recurse -Force build }
 
-      - name: Generate .env from secret
+      - name: Generate .env
         shell: pwsh
         run: |
           "@`"SENTRY_DSN=${{ secrets.SENTRY_DSN }}`"" | Out-File -Encoding ASCII -FilePath .env
 
-      - name: Build portable EXE
-        run: |
-          pyinstaller --clean --noconfirm --windowed --name "NREGABot" `
-            --icon=assets/app_icon.ico `
-            --add-data="logo.png;." `
-            --add-data="payment_qr.png;." `
-            --add-data="theme.json;." `
-            --add-data="changelog.json;." `
-            --add-data="assets;assets" `
-            --add-data=".env;." `
-            --add-data="jobcard.jpeg;." `
-            --collect-data fpdf `
-            main_app.py
+      - name: Build Portable EXE
+        run: pyinstaller --clean --noconfirm --windowed --name "NREGABot" --add-data ".env;." main_app.py
 
-      - name: Rename portable EXE
-        run: |
-          mkdir dist_out
-          mv dist/NREGABot/NREGABot.exe dist_out/NREGABot-v${{ needs.prepare.outputs.version }}-Portable.exe
+      - name: Rename portable
+        run: Rename-Item -Path "dist\NREGABot\NREGABot.exe" -NewName "NREGABot-v${{ needs.prepare.outputs.version }}-Portable.exe"
 
       - name: Install Inno Setup
-        run: |
-          curl -L -o is.exe https://jrsoftware.org/download.php/is.exe
-          Start-Process .\is.exe -ArgumentList "/VERYSILENT" -Wait
+        run: choco install innosetup -y
 
-      - name: Build installer
+      - name: Build Installer
         shell: pwsh
         run: |
           & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" installer_script.iss
 
-      - name: Rename installer EXE
-        run: |
-          mkdir dist_installer
-          mv Output/NREGABot-Setup.exe dist_installer/NREGABot-v${{ needs.prepare.outputs.version }}-Setup.exe
+      - name: Rename installer
+        run: Rename-Item "Output\NREGABot-Setup.exe" "NREGABot-v${{ needs.prepare.outputs.version }}-Setup.exe"
 
-      - name: Upload Windows files
+      - name: Upload Windows artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: windows
+          name: windows-artifact
           path: |
-            dist_out/*.exe
-            dist_installer/*.exe
+            dist\NREGABot-v*-Portable.exe
+            Output\NREGABot-v*-Setup.exe
 
   build-linux:
     needs: prepare
@@ -164,50 +112,34 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install system dependencies + fpm
+      - name: Install deps
         run: |
           sudo apt-get update
-          sudo apt-get install -y ruby ruby-dev build-essential python3-pyqt5 pyqt5-dev-tools
+          sudo apt-get install -y ruby ruby-dev build-essential
           sudo gem install --no-document fpm
+          pip install pyinstaller
 
-      - name: Install Python dependencies
-        run: pip install -r requirements.txt pyinstaller fpdf
-
-      - name: Clean previous builds
-        run: rm -rf dist build package
-
-      - name: Generate .env from secret
+      - name: Create .env
         run: echo "SENTRY_DSN=${{ secrets.SENTRY_DSN }}" > .env
 
-      - name: Build Linux app
-        run: |
-          pyinstaller --clean --noconfirm --windowed --name "NREGABot" \
-            --add-data="logo.png:." \
-            --add-data="payment_qr.png:." \
-            --add-data="theme.json:." \
-            --add-data="changelog.json:." \
-            --add-data="assets:assets" \
-            --add-data=".env:." \
-            --add-data="jobcard.jpeg:." \
-            --collect-data fpdf \
-            main_app.py
+      - name: Build binary
+        run: pyinstaller --clean --noconfirm --windowed --name "NREGABot" --add-data ".env:." main_app.py
 
-      - name: Create .deb package
+      - name: Package .deb with FPM
         run: |
-          mkdir -p package/usr/local/bin
-          cp dist/NREGABot/NREGABot package/usr/local/bin/
-          fpm -s dir -t deb -n nregabot -v ${{ needs.prepare.outputs.version }} \
-              --prefix=/usr/local/bin \
-              -C package .
+          VERSION=${{ needs.prepare.outputs.version }}
+          mkdir -p pkg/usr/local/bin
+          cp dist/NREGABot/NREGABot pkg/usr/local/bin/
+          fpm -s dir -t deb -n nregabot -v "$VERSION" --prefix=/ -C pkg .
 
       - name: Rename .deb
-        run: mv *.deb NREGABot-v${{ needs.prepare.outputs.version }}-linux.deb
+        run: mv nregabot_${{ needs.prepare.outputs.version }}_amd64.deb NREGABot-v${{ needs.prepare.outputs.version }}-linux.deb
 
-      - name: Upload .deb
+      - name: Upload Linux artifact
         uses: actions/upload-artifact@v4
         with:
-          name: linux-deb
-          path: NREGABot-v${{ needs.prepare.outputs.version }}-linux.deb
+          name: linux-artifact
+          path: ./NREGABot-v*-linux.deb
 
   release:
     needs: [build-macos, build-windows, build-linux]
@@ -215,41 +147,32 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Download artifacts
+      - name: Download all artifacts
         uses: actions/download-artifact@v4
         with:
           path: release-assets
 
       - name: Extract version from tag
-        id: get_version
-        run: echo "version=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
+        id: version
+        run: echo "version=${GITHUB_REF#refs/tags/v}" >> $GITHUB_OUTPUT
 
-      - name: Parse changelog to markdown
+      - name: Parse changelog
         id: changelog
         run: |
-          VERSION=${GITHUB_REF##*/}  # e.g. v2.5.3
-          VERSION_CLEAN=${VERSION#v}
-          TITLE="NREGA Bot ${VERSION}"
+          VERSION=${GITHUB_REF#refs/tags/v}
+          TITLE="NREGA Bot v$VERSION"
+          BODY=$(jq -r --arg v "$VERSION" '.[$v][]' changelog.json | sed 's/^/- /')
+          echo "$BODY" > body.md
           echo "title=$TITLE" >> $GITHUB_OUTPUT
-
-          echo "## What's New in $VERSION" > body.md
-          jq -r --arg v "$VERSION_CLEAN" '
-            .[$v] // {} |
-            to_entries[] |
-            (if .key | test("✨") then "### ✨ " + .value
-             elif .key | test("🐞") then "### 🐞 " + .value
-             elif .key | test("🛠️") then "### 🛠️ " + .value
-             else "- " + .value end)
-          ' changelog.json >> body.md
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           name: ${{ steps.changelog.outputs.title }}
-          tag_name: ${{ github.ref }}
+          tag_name: ${{ github.ref_name }}
           body_path: body.md
           files: |
-            release-assets/**/*NREGABot*-macOS.dmg
-            release-assets/**/*NREGABot*-Portable.exe
-            release-assets/**/*NREGABot*-Setup.exe
-            release-assets/**/*NREGABot*-linux.deb
+            release-assets/**/NREGABot-v*-macOS.dmg
+            release-assets/**/NREGABot-v*-Portable.exe
+            release-assets/**/NREGABot-v*-Setup.exe
+            release-assets/**/NREGABot-v*-linux.deb
