--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -213,25 +213,25 @@ jobs:
           path: NREGABot-v${{ needs.prepare.outputs.version }}-linux.deb
 
   release:
-    needs: [build-macos, build-windows, build-linux]
+    needs: [build-macos, build-windows, build-linux, prepare]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
       - name: Extract version from tag
-        id: extract_version
+        id: get_version
         run: |
           RAW_TAG=${GITHUB_REF##*/}
           VERSION=${RAW_TAG#v}
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          echo "version=$VERSION" >> $GITHUB_OUTPUT
 
-      - name: Read changelog.json and generate release notes
+      - name: Read changelog.json and format description
         run: |
-          echo "NREGA Bot v$VERSION" > release.md
+          VERSION="${{ steps.get_version.outputs.version }}"
+          echo "## NREGA Bot v$VERSION" > release.md
           echo "" >> release.md
-          echo "What's New in v$VERSION" >> release.md
+          echo "### What's New in v$VERSION" >> release.md
           echo "" >> release.md
-
           jq -r --arg v "$VERSION" '.[$v][]' changelog.json >> release.md
           cat release.md
 
@@ -243,12 +243,11 @@ jobs:
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          name: NREGA Bot v${{ env.VERSION }}
-          tag_name: v${{ env.VERSION }}
+          name: NREGA Bot v${{ steps.get_version.outputs.version }}
+          tag_name: v${{ steps.get_version.outputs.version }}
           body_path: release.md
           files: |
             release-assets/**/*NREGABot*-macOS.dmg
             release-assets/**/*NREGABot*-Portable.exe
             release-assets/**/*NREGABot*-Setup.exe
             release-assets/**/*NREGABot*-linux.deb
-
